Fixes layout shift when toggling edit mode

--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  overflow: hidden;
 }
 
 #app {
